1999-12-12  olicha   <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (ProcessMessage):
	(redraw_buttons):
	Some clean up

1999-12-10  Hippo

	* FvwmIconBox/FvwmIconBox.c: fixed loss of shaped Netscape Mail icon.

1999-12-09  olicha   <olivier.chapuis@free.fr>

	* FvwmButtons/FvwmButtons.c (HandlePanelPress):
	* FvwmButtons/FvwmButtons.1:
	Just updated the last SlideWindow argument. Explained the use
  	of NoHints with panels and updated the noborder option.

1999-12-08  Dan Espen  <dane@mk.telcordia.com>

	* FvwmAuto/FvwmAuto.c: Added DEBUGTOFILE capability.
	Remove the #define inside the else.

	* FvwmButtons/FvwmButtons.1 Grammar.

1999-12-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (list_new_page):
	tried to fix M_NEW_PAGE packets in pager

1999-12-07  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c: You can save and  use the previous setting
 	of a choice.

	* FvwmForm/FvwmForm.1: Document the saving of choices.

	* FvwmForm/FormFvwmRlogin.: Change the   rlogin  form so that  it
 	remembers how it was last used.

1999-12-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* Makefile.am:
	removed GFvwmDebug

1999-12-06  olicha   <olivier.chapuis@free.fr>

	* FvwmPager/FvwmPager.c (list_new_page):
	Fixed a problem if you switch of desk via clicking on a page

	* FvwmButtons/parse.c (ParsePanel):
	Fixed typo in comments

1999-12-06  olicha   <olivier.chapuis@free.fr>

	* FvwmWinList/FvwmWinList.c (ProcessMessage):
	Take in account bottom title and update the border width and title
	height in the good place to fix a bug with dynamic style changes
	and DeskOnly option.

	* FvwmButtons/FvwmButtons.1:
	Added a sentence in the position doc

1999-12-06  Dan Espen  <dane@mk.telcordia.com>

	* FvwmButtons/FvwmButtons.1 (panel): Corrections to wording.

1999-12-06  olicha   <olivier.chapuis@free.fr>

	* FvwmButtons/FvwmButons.c (GetPanelGeometry):
	(process_message):
	(HandlePanelPress):
	* FvwmButtons/FvwmButons.h (button_info_struct):